feat(ai): a workspace may connect several AI providers, each with its own key
Connecting a second provider overwrote the first one's key. luke_ai_provider held one row per
tenant (id = tenantId) and every key went into one secret name, 'ai.provider-key' — so a
workspace that had verified Groq and then added Gemini lost the Groq key outright, silently,
with no confirmation and no way back. A workspace could only ever hold one provider.

Each provider now has its own row, keyed (tenant, provider), and its own secret name
'ai.provider-key.<provider>'. Adding one cannot touch another.

V29 migrates in place: every existing row becomes that provider's row, is marked preferred (it
was the only one), and its stored key is renamed to the per-provider name — nothing has to be
re-pasted.

Turn resolution is now: the person's chosen provider if it is still connected, else the
workspace's preferred one; then their model, the workspace's model for that provider, or the
provider's default. So two people in one workspace can run on different providers at once, which
is the point of connecting more than one.

Three failure modes the design had to answer, each tested:
  * a later provider must not steal the default — the first connected keeps it until someone
    says otherwise;
  * removing the default must hand it on, or the workspace keeps providers while every turn
    fails for anyone who never picked one — a state nobody would think to look for;
  * removing a provider must stop honouring choices made for it, or a Groq model name goes to
    Anthropic and fails that one person's turns while the owner's work fine.

/api/ai/provider now returns a `connections` list with per-provider status, and the mutating
routes are provider-addressed. markInvalid only marks the provider whose key actually failed:
one refusing says nothing about the others.

1189 tests pass (45 AI, 5 new).

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>